# friday

./: .gitignore  LICENSE  README.md  env.dist  friday.py  main.py  pyproject.toml
