[project]
name = "friday"
version = "0.1.0"
description = "A terminal CLI for asking quick questions to Google's Gemini API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "rich>=14.1.0",
]

[project.scripts]
friday = "friday:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
